# meshctx

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IDENTITY.md  LICENSE  OVERNIGHT_REPORT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  ROADMAP_112H.md  SOUL.md  TESTING_README.md  TEST_REPORT.md  USER.md  aboutus.txt  deploy.sh  docker-compose.yml  index.html  install.bat  install.sh  llms.txt  logo.icns  meshctx.spec  meshctx.spec.bak  meshctx.yaml  meshctx_desktop.py  meshctx_desktop.spec  meshctx_gui.py  meshctx_setup.nsi  model_status_20260515_073026.txt  provider_config.json  pyproject.toml  requirements-test.txt  requirements.txt  run.sh  run_tests.py  start_webui.sh  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
docs/: CNAME  CONNECTOR_TEMPLATE.md  DESIGN_v1.0.md  LEGAL.md  USER_GUIDE.md  api.md  architecture.md  competition.md  docs.html  download.html  getting-started.html  getting-started.md  index.html  index.html.docs  index.md  install.bat  install.sh  llms.txt  plugins.md
frontend/: index.html  package.json  vite.config.ts
meshctx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plugins/: registry.json
scripts/: build-mac.sh  release.sh  remote_dl.sh
server/: __init__.py  main.py
src/: __init__.py  adapter.py  browser_tool.py  capabilities.py  chat_tools.py  cli.py  config.py  context_portal.py  cron.py  cross_platform_engine.py  gateway.py  hermes_catalog.py  i18n.py  intent_parser.py  llm_extractor.py  main.py  mcp_server.py  memory_engine.py  model_adapter.py  model_registry.py  models.py  orchestrator.py  plugin_system.py  session_search.py  skill_manager.py  soul.py  tts.py  vector_store.py  web_ui.py
static/: style.css
templates/: base.html  chat.html  continuity.html  conversation.html  dashboard.html  memories.html  project_detail.html  projects.html  setup.html
tests/: __init__.py  benchmark_v1.1.py  benchmark_v16.py  benchmark_v19.py  benchmark_v217.py  conftest.py  e2e_full_test.py  run_e2e_test.py  test_api_full_coverage.py  test_e2e_model_config.py  test_edge_cases.py  test_full_suite.py  test_memory_engine.py  test_memory_persistence.py  test_v11_brain.py  test_v14_extended.py  test_v14_features.py  test_v1519_code_run.py  test_v1520_multi_project.py  (+32 more)
(+102 files in other folders)
