[project]
name = "meshctx"
version = "1.1.1"
description = "World's First Self-Evolving Agent System"
authors = [{name = "Jason Liu", email = "support@meshctx.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
]
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.4.3", "pytest-asyncio>=0.23.0", "black>=23.11.0", "flake8>=6.1.0"]
llm = ["openai>=1.6.0"]
vector = ["chromadb>=0.4.22", "sentence-transformers>=2.2.2"]

[project.scripts]
meshctx = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "src.core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
